# data_pipelines

wi_dairy_pipeline/: Cargo.toml  makefile  readme.md
wi_dairy_pipeline/src/: lib.rs  main.rs
