[package]
name = "wi_dairy_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.3", features = ["blocking"]}
csv="1.1.6"
tokio = { version = "1", features = ["full"] }
geocoding = { version = "*", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }